# memories

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  vitest.config.js
docs/: facts-v2.plan.md  frontend-testing.md  optimization-plan.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  plan.md  streaming-plan.md
src/memories/: database.py  deps.py  exceptions.py  main.py
src/memories/frontend/: chat-component.js  chat.js  index.html
src/memories/models/: __init__.py
src/memories/routers/: characters.py  chat.py  decisions.py  experiences.py  facts.py  implication.py  inferences.py  sessions.py
src/memories/services/: chat_service.py  evaluator.py  experience_service.py  extraction_service.py  inference_service.py  ollama_client.py  prompt_builder.py
tests/: conftest.py
tests/frontend/: chat-component.test.js  chat.test.js
tests/integration/: conftest.py  test_api_characters.py  test_api_chat.py  test_api_decisions.py  test_api_experiences.py  test_api_extraction_resolution.py  test_api_facts.py  test_api_implication.py  test_api_inference_generation.py  test_api_inference_promotion.py  test_api_sessions.py  test_characters_repo.py  test_db_init.py  test_decisions_repo.py  test_experiences_repo.py  test_facts_repo.py  test_inferences_repo.py  test_messages_repo.py  test_sessions_repo.py
tests/unit/: conftest.py  test_chat_service.py  test_evaluator_service.py  test_experience_service.py  test_extraction_service.py  test_inference_service.py  test_ollama_client.py  test_prompt_builder.py
