[project]
name = "memories"
version = "0.1.0"
description = "Character roleplay chatbot with structured memory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.21",
    "httpx>=0.27",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "pytest-mock>=3.14",
    "mypy>=1.13",
    "ruff>=0.8",
    "bandit[toml]>=1.7",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memories"]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "ANN",      # flake8-annotations
    "RUF",      # ruff-specific rules
]
ignore = [
    "B008",     # FastAPI uses function calls in default args (Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=memories",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--cov-branch",
]

[tool.coverage.run]
source = ["memories"]
branch = true
omit = ["*/frontend/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# ---------------------------------------------------------------------------
# Bandit — security scanning
# ---------------------------------------------------------------------------

[tool.bandit]
targets = ["src/"]
exclude_dirs = ["tests/"]
skips = ["B101"]   # assert is fine in tests
